# cppstarter

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
apps/: CMakeLists.txt  app.cpp
external_lib/apps/: app.cpp
external_lib/lib/: lib.hpp
internal_lib/: .clang-format  CMakeLists.txt
internal_lib/apps/: CMakeLists.txt  app.cpp
internal_lib/lib/: CMakeLists.txt
internal_lib/tests/: CMakeLists.txt  testlib.cpp
lib/: CMakeLists.txt  lib.cpp  lib.hpp
single/: CMakeLists.txt  main.cpp
single_testable/: CMakeLists.txt  project.cpp  project.h
single_testable/tests/: CMakeLists.txt  test_main.cpp  test_project.cpp
static_analysis/: README.md  cmake_commands
tests/: CMakeLists.txt  testlib.cpp
